# master-thesis-vt26

./: .gitignore  LICENSE  README.md  TRAINING_GUIDE.md  dino_heatmaps.py  download_zinc_data.py  evaluate.py  knn_eval.py  knn_eval_PDBbind.py  knn_eval_hiv.py  knn_eval_hiv_finetune.py  knn_eval_lip.py  knn_eval_lip_finetune.py  log_loss_plot.py  main.py  precompute_graphs.py  pyproject.toml  requirements.txt  rf_model.py  run_train.sbatch  test_model.py  train.py  train_dino.py  train_manager.py  tsne_eval.py
configs/: README.md  gat_precomp_mask.json  gdz_gat_khop.json  gdz_gine_khop.json  gdz_gine_masking.json  gine_precomp_mask.json
data/zinc/: ZINC-downloader-2D-smi.uri
datahandling/: __init__.py  dataloader_creation.py  dataset_creation.py  graph_augmentation.py  graph_creation.py
evaluation/: __init__.py  knn.py  linear_probe.py
evaluation_cache/: hiv_morgan.json  hiv_morgan.npz  lipo_morgan.json  lipo_morgan.npz
model/: __init__.py  config.py  data_handler.py  dataloader_creation.py  dataset_creation.py  dino_data.py  dino_ssl.py  gin_model.py  gine_model.py  gnn_model.py  graph_augmentation.py  graph_creation.py  notebook.ipynb
models/GDZ_2Layer/: config.json  loss_history.json
models/GDZ_5000Epochs/: config.json  loss_history.json  metadata.json
models/GDZ_5000Epochs_300Dim/: config.json  loss_history.json
models/GDZ_BS128/: config.json  loss_history.json
plotting/: knn_eval_plots.py  loss_plot.py  t_sne_embeddings.py  zinc_atom_count_distribution.py
training/: __init__.py  dino_training.py  online_evaluator.py  train_manager.py
(+217 files in other folders)
